--- a/assets/pdf.css
+++ b/assets/pdf.css
@@ -1,7 +1,43 @@
 body {
-    font-size: 0.225em;
+    font-size: 0.425em;
 }
 h1, h2, h3 {
-    font-size: 16px;
-    color: #990000;
+    font-size: 12px;
+    color: #777777;
+}
+
+code, tt {
+    margin: 0 2px;
+    padding: 0 5px;
+    white-space: nowrap;
+    border: 1px solid #eaeaea;
+    background-color: #f8f8f8;
+    border-radius: 3px;
+    font-family: Consolas, 'Liberation Mono', Courier, monospace;
+    font-size: 8px;
+    color: #333333;
+}
+
+pre > code {
+    margin: 0;
+    padding: 0;
+    white-space: pre;
+    border: none;
+    background: transparent;
+}
+
+pre {
+    background-color: #f8f8f8;
+    border: 1px solid #ccc;
+    font-size: 8px;
+    line-height: 10px;
+    overflow: auto;
+    padding: 6px 10px;
+    border-radius: 3px;
+    margin: 4px 0;
+}
+
+pre code, pre tt {
+    background-color: transparent;
+    border: none;
 }
